--- a/src/scenes/Search/styles.css
+++ b/src/scenes/Search/styles.css
@@ -14,3 +14,9 @@
 	border-width: 0 0 1px 0;
 	border-color: #F55363;
 }
+
+.search__filter-panel {
+    margin-top: 1em;
+    display: flex;
+    justify-content: space-between;
+}
