--- a/src/scenes/Search/scenes/SearchButton/styles.css
+++ b/src/scenes/Search/scenes/SearchButton/styles.css
@@ -1,6 +1,6 @@
 .search-button button {
 	margin-left: 1em;
-	padding: 1ex 1em;
+	padding: 0.5em 1em;
 	border: 0;
 	border-radius: 0.5ex;
 	width: 20ex;
