--- a/src/scenes/Search/scenes/SearchBy/styles.css
+++ b/src/scenes/Search/scenes/SearchBy/styles.css
@@ -8,7 +8,7 @@
 
 .search-by button {
 	margin-left: 1em;
-	padding: 1ex 1em;
+	padding: 0.5em 1em;
 	border: 0;
 	border-radius: 0.5ex;
 	width: 10ex;
