--- a/src/scenes/App/scenes/SelectedMovie/styles.css
+++ b/src/scenes/App/scenes/SelectedMovie/styles.css
@@ -57,7 +57,8 @@
 }
 
 .selected-movie > footer {
-	padding: 1em;
+	padding: 1em 0 1em 10ex;
 	background-color: #F5F5F5;
 	color: #000;
+	font-weight: bold;
 }
